Title Changed to MangaFace.

--- a/public/frame.html
+++ b/public/frame.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>FaeApp</title>
+    <title>MangaFace</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <link rel="stylesheet" type="text/css" href="./assets/styles/face-app.css?ver=1.2.0">
 	<link rel="stylesheet" type="text/css" href="./assets/styles/face-app-icons.css?ver=1.2.0">
@@ -57,7 +57,7 @@
         <li data-number="5"></li>
     </ul>
     <div class="frame-bar">
-        <div class="title">Negarang FaceApp</div>
+        <div class="title">MangaFace</div>
         <label><input name="use_face" value="1" type="checkbox" checked><span> Show My Face in The Game and Community.</span></label>
     </div>
 </div>
