--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
     <title>MangaFace</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="./assets/favicon/site.webmanifest">
     <link rel="stylesheet" type="text/css" href="./assets/styles/ui_components.css?ver=1.0">
     <link rel="stylesheet" type="text/css" href="./assets/themes/default/designer_screen.css?ver=1.0">
     <style>
