--- a/web-client/tests/ui/index.html
+++ b/web-client/tests/ui/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
         <link rel="stylesheet" type="text/css" href="/public/assets/styles/ui_components.css?v=1.0">
         <link rel="stylesheet" type="text/css" href="/public/assets/themes/default/designer_screen.css?v=1.0">
-        <script type="module" src="./tester.js?v=1.0"></script>
+        <script type="module" src="./main.js?v=1.0"></script>
     </head>
     <body></body>
 </html>
