chore: replace Webpack with Vite

--- a/web/index.html
+++ b/web/index.html
@@ -20,17 +20,18 @@
         .page-footer a:last-child { font-size: smaller; }
     </style>
 </head>
-    <body>
-        <div class="page-container">
-            <div class="app-container" id="MF_APP_CONTAINER"></div>
-            <div class="page-footer">
-                <a href="https://miladnia.github.io/MangaFace" target="_blank">ABOUT</a> |
-                <a href="https://github.com/miladnia/MangaFace" target="_blank">SOURCE CODE</a> |
-                <a href="https://github.com/miladnia/MangaFace/blob/HEAD/LICENSE" target="_blank">LICENSE</a>
-                <br>
-                <a href="https://www.freepik.com/free-photos-vectors/background">Background vector created by freepik - www.freepik.com</a>
-            </div>
+<body>
+    <div class="page-container">
+        <div class="app-container" id="MF_APP_CONTAINER"></div>
+        <div class="page-footer">
+            <a href="https://miladnia.github.io/MangaFace" target="_blank">ABOUT</a> |
+            <a href="https://github.com/miladnia/MangaFace" target="_blank">SOURCE CODE</a> |
+            <a href="https://github.com/miladnia/MangaFace/blob/HEAD/LICENSE" target="_blank">LICENSE</a>
+            <br>
+            <a href="https://www.freepik.com/free-photos-vectors/background">Background vector created by freepik - www.freepik.com</a>
         </div>
-        <script type="text/javascript" src="./app_bundle.js?ver=1.1.0"></script>
-    </body>
+    </div>
+    <!-- <script type="text/javascript" src="./app_bundle.js?ver=1.1.0"></script> -->
+    <script type="module" src="/src/main.js"></script>
+</body>
 </html>
