refactor: replace repositories with a single 'manifest' object
- setup Jest

--- a/web/index.html
+++ b/web/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <div class="page-container">
-        <div class="app-container" id="MF_APP_CONTAINER"></div>
+        <div class="app-container" id="root"></div>
         <div class="page-footer">
             <a href="https://miladnia.github.io/MangaFace" target="_blank">ABOUT</a> |
             <a href="https://github.com/miladnia/MangaFace" target="_blank">SOURCE CODE</a> |
