chore: polish and simplify UI

--- a/web/index.html
+++ b/web/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="./assets/favicon/site.webmanifest">
     <link rel="stylesheet" type="text/css" href="./assets/styles/ui_components.css?ver=1.0">
-    <link rel="stylesheet" type="text/css" href="./assets/themes/default/designer_screen.css?ver=1.0">
+    <link rel="stylesheet" type="text/css" href="./assets/themes/fancy_theme/fancy_theme_with_animations.css">
     <style>
         html, body { min-width: 400px; height: 100%; margin: 0; padding: 0; }
         body { font-size: 14px; font-family: arial,sans-serif; }
@@ -31,7 +31,6 @@
             <a href="https://www.freepik.com/free-photos-vectors/background">Background vector created by freepik - www.freepik.com</a>
         </div>
     </div>
-    <!-- <script type="text/javascript" src="./app_bundle.js?ver=1.1.0"></script> -->
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/main.ts"></script>
 </body>
 </html>
