--- a/web/index.html
+++ b/web/index.html
@@ -24,11 +24,16 @@
     <div class="page-container">
         <div class="app-container" id="root"></div>
         <div class="page-footer">
-            <a href="https://miladnia.github.io/MangaFace" target="_blank">ABOUT</a> |
-            <a href="https://github.com/miladnia/MangaFace" target="_blank">SOURCE CODE</a> |
-            <a href="https://github.com/miladnia/MangaFace/blob/HEAD/LICENSE" target="_blank">LICENSE</a>
+            by <a href="https://github.com/miladnia">Milad Nia</a> |
+            <a href="https://github.com/miladnia/MangaFace">Repository</a> |
+            <a href="https://github.com/miladnia/MangaFace/blob/HEAD/LICENSE">License</a>
             <br>
             <a href="https://www.freepik.com/free-photos-vectors/background">Background vector created by freepik - www.freepik.com</a>
+        </div>
+        <div style="padding: 0.75rem 2.5rem; position: fixed; bottom: 0; right: 0;">
+            <a href="https://github.com/miladnia/MangaFace">
+                <img alt="GitHub Repo stars" src="https://img.shields.io/github/stars/miladnia/MangaFace">
+            </a>
         </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
