--- a/web/index.html
+++ b/web/index.html
@@ -26,7 +26,7 @@
     <div class="app-container" id="root"></div>
     <div class="page-footer">
       by <a href="https://github.com/miladnia">Milad Nia</a> |
-      <a href="https://github.com/miladnia/MangaFace">Repository</a> |
+      <a href="https://github.com/miladnia/MangaFace">Source Code</a> |
       <a href="https://github.com/miladnia/MangaFace/blob/HEAD/LICENSE">License</a>
       <br>
       <a href="https://www.freepik.com/free-photos-vectors/background">Background vector created by freepik - www.freepik.com</a>
