feat: improve dark theme support
- Set the default color-scheme to "dark"
- Added a <meta name="color-scheme"> tag to help browser extensions like DarkReader detect the dark mode automatically.

--- a/web/index.html
+++ b/web/index.html
@@ -2,20 +2,22 @@
 <html>
 <head>
   <title>MangaFace | Create Your Own Custom Avatar</title>
-  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png">
-  <link rel="manifest" href="./assets/favicon/site.webmanifest">
-  <link rel="stylesheet" type="text/css" href="./assets/styles/ui_components.css?ver=1.0">
-  <link rel="stylesheet" type="text/css" href="./assets/themes/fancy_theme/fancy_theme_with_animations.css">
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="color-scheme" content="dark light" />
+  <meta name="theme-color" content="#1d1d1b" />
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png" />
+  <link rel="manifest" href="./assets/favicon/site.webmanifest" />
+  <link rel="stylesheet" type="text/css" href="./assets/styles/ui_components.css?ver=1.0" />
+  <link rel="stylesheet" type="text/css" href="./assets/themes/fancy_theme/fancy_theme_with_animations.css" />
   <style>
     html, body { min-width: 400px; height: 100%; margin: 0; padding: 0; }
     body { font-size: 14px; font-family: arial,sans-serif; }
     .page-container { display: flex; height: 100%; flex-direction: column; background: url(./assets/background.jpg) no-repeat center; background-size: cover; overflow: auto; }
     .app-container { display: flex; width: 85%; align-self: center; align-items: center; flex-grow: 1; padding: 20px 0; margin: 0 auto; }
-    .page-footer { width: 100%; padding: 1em 0; background: #232321; color: #ad7135; font-family: arial, sans-serif; font-size: 0.8em; font-weight: bold; text-align: center; position: relative; }
+    .page-footer { width: 100%; padding: 1em 0; background: #1d1d1b; color: #ad7135; font-family: arial, sans-serif; font-size: 0.8em; font-weight: bold; text-align: center; position: relative; }
     .page-footer a { color: inherit; text-decoration: none; }
     .page-footer a:last-child { font-size: smaller; }
     .gh-stars { padding: 0.75rem 2.5rem; position: absolute; bottom: 0; right: 0; }
